--- a/sources/contenu/style.css
+++ b/sources/contenu/style.css
@@ -34,13 +34,13 @@ nav{
     width: 70%;
     margin: 0 auto;
     position:sticky;
-    background-color: white;
+    background-color:transparent;
     top:0px;
 }
 nav a{
     display:block;
     text-decoration: none;
-    color:black;
+    color:white;
     border-bottom: 2px solid transparent;
     padding:30px 0px;
 }
@@ -80,9 +80,9 @@ html{
     box-sizing:border-box
   }
   #menu-lat ul {
-      width:200px;
-      list-style:none;
-      padding:0px;
+    width:300px;
+    list-style:none;
+    padding:0px;
   }
   
   #menu-lat ul li {
