--- a/sources/contenu/style.css
+++ b/sources/contenu/style.css
@@ -34,7 +34,9 @@ nav{
     width: 70%;
     margin: 0 auto;
     position:sticky;
-    background-color:transparent;
+    background: #E8CBC0;
+    background: -webkit-linear-gradient(to right, #636FA4, #E8CBC0);
+    background: linear-gradient(to right, #636FA4, #E8CBC0);
     top:0px;
 }
 nav a{
